// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`genContextBrain.discoveryNotFound.realRegistry.realnode.acceptance given: [case1] discovery mode, driven against the REAL installed brain registry when: [t0] a generic choice matches no installed brain then: the real-registry generic not-found message matches snapshot 1`] = `
"BrainChoiceNotFoundError: brain not found: nonexistent/brain-slug-xyz

🔭 available brains
   ├── ↻ openai/codex
   ├── ○ openai/gpt/4o
   ├── ○ fireworks/qwen/3.7-plus
   ├── ○ fireworks/glm/5.2
   ├── ○ fireworks/minimax/m3
   ├── ○ fireworks/minimax/2.7
   ├── ○ xai/grok/code-fast-1
   ├── ○ xai/grok/3-mini
   ├── ○ anthropic/claude/haiku
   ├── ○ anthropic/claude/sonnet
   ├── ○ anthropic/claude/opus
   ├── ○ fireworks/kimi/k2.7-code
   ├── ○ fireworks/kimi/k2.6
   ├── ○ fireworks/gpt-oss/120b
   ├── ○ fireworks/gpt-oss/20b
   ├── ○ xai/grok/3
   ├── ○ xai/grok/4
   ├── ↻ anthropic/claude/code
   ├── ○ fireworks/deepseek/v4-pro
   ├── ○ xai/grok/4-fast-wout-reason
   ├── ○ fireworks/deepseek/v4-flash
   └── (and 6 more)

{
  "choice": "nonexistent/brain-slug-xyz",
  "available": {
    "atoms": [
      "anthropic/claude/haiku",
      "anthropic/claude/sonnet",
      "anthropic/claude/opus",
      "fireworks/deepseek/v4-pro",
      "fireworks/deepseek/v4-flash",
      "fireworks/kimi/k2.7-code",
      "fireworks/kimi/k2.6",
      "fireworks/qwen/3.7-plus",
      "fireworks/glm/5.2",
      "fireworks/minimax/m3",
      "fireworks/minimax/2.7",
      "fireworks/gpt-oss/120b",
      "fireworks/gpt-oss/20b",
      "openai/gpt/4o",
      "xai/grok/code-fast-1",
      "xai/grok/3",
      "xai/grok/3-mini",
      "xai/grok/4",
      "xai/grok/4-fast-wout-reason",
      "xai/grok/4-fast-with-reason",
      "xai/grok/4.1-fast-wout-reason",
      "xai/grok/4.1-fast-with-reason"
    ],
    "repls": [
      "anthropic/claude/code",
      "anthropic/claude/code/haiku",
      "anthropic/claude/code/sonnet",
      "anthropic/claude/code/opus",
      "openai/codex"
    ]
  }
}"
`;

exports[`genContextBrain.discoveryNotFound.realRegistry.realnode.acceptance given: [case1] discovery mode, driven against the REAL installed brain registry when: [t1] a typed repl choice matches no installed repl then: the real-registry repl not-found message matches snapshot 1`] = `
"BrainChoiceNotFoundError: repl brain not found: nonexistent/repl-xyz

🔭 available brains
   ├── ↻ openai/codex
   ├── ↻ anthropic/claude/code
   ├── ↻ anthropic/claude/code/haiku
   ├── ↻ anthropic/claude/code/opus
   └── ↻ anthropic/claude/code/sonnet

{
  "choice": {
    "repl": "nonexistent/repl-xyz"
  },
  "available": {
    "repls": [
      "anthropic/claude/code",
      "anthropic/claude/code/haiku",
      "anthropic/claude/code/sonnet",
      "anthropic/claude/code/opus",
      "openai/codex"
    ]
  }
}"
`;

exports[`genContextBrain.discoveryNotFound.realRegistry.realnode.acceptance given: [case1] discovery mode, driven against the REAL installed brain registry when: [t2] a typed atom choice matches no installed atom then: the real-registry atom not-found message matches snapshot 1`] = `
"BrainChoiceNotFoundError: atom brain not found: nonexistent/atom-xyz

🔭 available brains
   ├── ○ openai/gpt/4o
   ├── ○ fireworks/glm/5.2
   ├── ○ xai/grok/3
   ├── ○ xai/grok/3-mini
   ├── ○ xai/grok/4
   ├── ○ fireworks/minimax/m3
   ├── ○ fireworks/kimi/k2.6
   ├── ○ fireworks/qwen/3.7-plus
   ├── ○ fireworks/minimax/2.7
   ├── ○ fireworks/gpt-oss/120b
   ├── ○ fireworks/gpt-oss/20b
   ├── ○ anthropic/claude/haiku
   ├── ○ anthropic/claude/opus
   ├── ○ fireworks/kimi/k2.7-code
   ├── ○ xai/grok/code-fast-1
   ├── ○ anthropic/claude/sonnet
   ├── ○ fireworks/deepseek/v4-pro
   ├── ○ fireworks/deepseek/v4-flash
   ├── ○ xai/grok/4-fast-wout-reason
   ├── ○ xai/grok/4-fast-with-reason
   ├── ○ xai/grok/4.1-fast-wout-reason
   └── (and 1 more)

{
  "choice": {
    "atom": "nonexistent/atom-xyz"
  },
  "available": {
    "atoms": [
      "anthropic/claude/haiku",
      "anthropic/claude/sonnet",
      "anthropic/claude/opus",
      "fireworks/deepseek/v4-pro",
      "fireworks/deepseek/v4-flash",
      "fireworks/kimi/k2.7-code",
      "fireworks/kimi/k2.6",
      "fireworks/qwen/3.7-plus",
      "fireworks/glm/5.2",
      "fireworks/minimax/m3",
      "fireworks/minimax/2.7",
      "fireworks/gpt-oss/120b",
      "fireworks/gpt-oss/20b",
      "openai/gpt/4o",
      "xai/grok/code-fast-1",
      "xai/grok/3",
      "xai/grok/3-mini",
      "xai/grok/4",
      "xai/grok/4-fast-wout-reason",
      "xai/grok/4-fast-with-reason",
      "xai/grok/4.1-fast-wout-reason",
      "xai/grok/4.1-fast-with-reason"
    ]
  }
}"
`;
